[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "shindan-cli"
version = "2.1.0"
description = "ShindanMaker (https://shindanmaker.com) CLI"
readme = "README.md"
keywords = [
  "cli",
  "shindanmaker",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "cloudscraper>=1.2.71,<2",
  "lxml>=5.3,<6",
  "requests>=2.32.3,<3",
]
urls.Repository = "https://github.com/eggplants/shindan-cli"
scripts.shindan = "shindan_cli.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "shindan_cli" },
]

[tool.poetry.group.dev.dependencies]
lxml-stubs = ">=0.4,<0.6"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<7"
taskipy = "^1.10.3"
types-beautifulsoup4 = "^4.11.6.7"
types-requests = "^2.28.11.14"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
target-version = [
  'py39',
]

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.taskipy.tasks]
lint = "pre-commit run -a"
profile = "python -m cProfile"
setup = "poetry install && pre-commit install -t pre-commit -t pre-push"
test = "pytest --cov=shindan_cli --cov-report=term"
"test:ci" = "task test --cov-report=xml:cov.xml"
