[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "shindan-cli"
description = "ShindanMaker (https://shindanmaker.com) CLI"
readme = "README.md"
keywords = [
  "cli",
  "shindanmaker",
]
license = { text = "MIT" }
authors = [ { name = "eggplants", email = "w10776e8w@yahoo.co.jp" } ]
requires-python = ">=3.10,<4"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4>=4.12.3,<5",
  "cloudscraper>=1.2.71,<2",
  "lxml>=5.3,<7",
  "requests>=2.32.3,<3",
]

urls.Repository = "https://github.com/eggplants/shindan-cli"
scripts.shindan = "shindan_cli.main:main"

[dependency-groups]
dev = [
  "pymarkdownlnt>=0.9.33",
  "pyproject-fmt>=2.11.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3",
  "pytest-cov>=7",
]
docs = [
  "pdoc>=16",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
include = [ "shindan_cli" ]

[tool.hatch.build.targets.wheel]
include = [ "shindan_cli" ]

[tool.uv]
preview = true
default-groups = [
  "dev",
  "docs",
]
exclude-newer = "P7D"

[tool.ruff]
line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812",
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the second line
]
lint.per-file-ignores."tests/*.py" = [
  "D",
  "S101", # Use of assert detected
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"
