[metadata]
name = shindan-cli
version = attr: shindan_cli.__init__.__version__
description = ShindanMaker (https://shindanmaker.com) CLI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    beautifulsoup4
    lxml
    requests


[options.entry_points]
console_scripts =
    shindan = shindan_cli.main:main

[yapf]
based_on_style = yapf
