[metadata]
name = shindan-cli
version = attr: shindan_cli.__init__.__version__
description = ShindanMaker (https://shindanmaker.com) CLI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    beautifulsoup4>=4.10.0
    types-beautifulsoup4>=4.10.0
    lxml>=4.8.0
    lxml-stubs>=0.3.1
    requests>=2.27.1
    types-requests>=2.27.1
packages_data =
    shindan_cli = py.typed
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    shindan = shindan_cli.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
